lab-12-cilium-spire/manifests/2-deny.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: deny-policy
spec:
  endpointSelector: {}
  egress:
    - {}
